# actix_rest_api

./: .gitignore  Cargo.toml  README.md
src/: main.rs  user.rs  user_routes.rs  user_service.rs
src/middleware/: auth.rs
src/utils/: jwt.rs  mod.rs  uid.rs
