[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
handlebars = "4.3.7"
jsonwebtoken = "8.3.0"
lettre = "0.10.4"
redis = "0.23.1"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = "0.7.1"
