[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.26"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
handlebars = "4.3.7"
jsonwebtoken = "8.3.0"
lettre = "0.10.4"
rand = "0.8.5"
redis = "0.23.1"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "mysql"] }
